feat: implement plausible deniability with multi-identity vault support
This feature introduces a multi-identity system that enables plausible
deniability for Cryptomator vaults. Users can create multiple identities
(primary and hidden) for a single vault, each with its own password and
masterkey, unlocking different data sets.

Key Components:

Backend Infrastructure:
- VaultIdentity: Represents a vault identity with metadata
- VaultIdentityManager: Manages multiple identities per vault
- IdentityInitializer: Creates and initializes vault identities
- VaultIdentityProvider: Provides identity-related services

Cryptographic Components:
- MultiKeyslotFile: Stores multiple encrypted masterkeys in a single file
- MultiKeyslotVaultConfig: Vault configuration format that conceals the
  existence of multiple identities, making vaults with hidden identities
  indistinguishable from standard single-identity vaults

UI Components:
- IdentitySelection: UI flow for selecting which identity to unlock
- HiddenVaultCreationDialog: Dialog for creating hidden vault identities
- IdentityManagementController: Manages identity-related vault options

Integration:
- Enhanced unlock workflow to support identity selection
- Vault options extended with identity management capabilities
- Migration support for existing vault configurations

Security Considerations:
- Each identity uses independent encryption keys
- Hidden identities are cryptographically indistinguishable from padding
- No metadata reveals the existence of multiple identities
- Compatible with existing single-identity vaults

This implementation follows principles similar to TrueCrypt/VeraCrypt hidden
volumes but adapted for Cryptomator's architecture and use cases.